--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:run": "cypress run"
+    "cy:run:junit": "cypress run --reporter=cypress-junit-reporter",
+    "merge:reports": "cypress-junit-report merge --report-dir=cypress/results/junit --report-files=junitresults.*.xml"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/dineshborude/api_automation_cypress#readme",
   "devDependencies": {
     "cypress": "^13.5.1",
+    "cypress-junit-reporter": "^1.3.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
     "mochawesome-report-generator": "^6.2.0"
